<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listBackground"
    android:orientation="vertical"
    tools:context="su.android.libraryapp.CardInfoFragment">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName|textCapWords"
        android:imeOptions="actionNext"
        android:imeActionLabel="NEXT"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:layout_marginStart="25dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName|textCapWords"
        android:imeOptions="actionNext"
        android:imeActionLabel="NEXT"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:layout_marginStart="25dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/barcode_data"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/barcode"
        android:inputType="number"
        android:maxLength="14"
        android:imeOptions="actionDone"
        android:imeActionLabel="ENTER"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:layout_marginStart="25dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/enterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="#EEFFFFFF"
        android:padding="10dp"
        android:text="@string/add_card"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

</LinearLayout>